# astro_map_plot

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
data/: amor_far_22.txt  ast_F5n.txt  ast_O18.txt  ast_V00.txt  ast_X05.txt  ast_oth.txt  asteroids_22.5.txt  asteroids_stn.txt  bsc5_data.txt  example_animation_test.txt  example_cities.txt  example_cities_pop.txt  example_messier.txt  example_observatory_dates.txt  example_solar_relative.txt  example_temperature.txt  mjd_ra_dec_far_22.txt  mjd_ra_dec_near_22.txt  mpc_observatories.txt  neos_17.75.txt  neos_19.25.txt  neos_20.75.txt  neos_22.00.txt  neos_24.25.txt  neos_26.25.txt  neos_27.75.txt  neos_34.40.txt  neos_near_22.txt  ra_dec_far_22.txt  ra_dec_near_22.txt
docs/: ANIMATION.md  ANIMATION_ADVANCED.md  CHANGELOG.md  COLORS_AND_CONFIG.md  GRID_LABELS.md  NEW_FEATURES.md  OBSERVATORIES.md  OBSERVATORY_ANIMATION.md  QUICKREF.md  SOLAR_RELATIVE.md  TODO.md  VERSION_2.0_RELEASE_NOTES.md
scripts/: demo_sky.sh  test.sh  test_animation.sh
src/: download_bsc5.py  install.sh  mapplot  mapplotrc.example
src/mapplot/: __init__.py  __main__.py  animation.py  catalog.py  cli.py  config.py  constants.py  coordinates.py  core.py  data_io.py  geometry.py  observatories.py  plotting.py
tests/: conftest.py  test_cli.py  test_coordinates.py  test_data_io.py
